force-app/main/default/objects/Clacualdora__c/Clacualdora__c.object-meta.xml
<CustomObject>
    <label>Clacualdora</label>
    <nameField>
        <label>Clacualdora Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calculadoras</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>