force-app/main/default/objects/Clacualdora__c/fields/Operacion__c.field-meta.xml
<CustomField>
    <fullName>Operacion__c</fullName>
    <label>Operacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suma</fullName>
            </value>
            <value>
                <fullName>Resta</fullName>
            </value>
            <value>
                <fullName>Multiplicacion</fullName>
            </value>
            <value>
                <fullName>Division</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>