force-app/main/default/objects/Clacualdora__c/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <formula>CASE(Operacion__c, &quot;SUMA&quot;,   Valor_Uno__c  +  Valor_2__c ,&quot;RESTA&quot;,  Valor_Uno__c -  Valor_2__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resultado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>