force-app/main/default/objects/Clacualdora__c/fields/Valor_2__c.field-meta.xml
<CustomField>
    <fullName>Valor_2__c</fullName>
    <label>Valor 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>