force-app/main/default/objects/Clacualdora__c/fields/Valor_Uno__c.field-meta.xml
<CustomField>
    <fullName>Valor_Uno__c</fullName>
    <label>Valor Uno</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>